website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.4.0/api/plugins/plugin-sitemap.mdx
---
sidebar_position: 10
slug: /api/plugins/@docusaurus/plugin-sitemap
---

# 📦 plugin-sitemap

import APITable from '@site/src/components/APITable';

此插件會為您的網站建立站點地圖，讓搜尋引擎爬蟲能更精確地爬取您的網站內容。

:::warning[僅限生產環境]

此插件在開發環境中始終處於非活動狀態，**僅在生產環境生效**，因為它作用於建置輸出結果。

:::

## 安裝 {#installation}

```bash npm2yarn
npm install --save @docusaurus/plugin-sitemap
```

:::tip

若您使用 `@docusaurus/preset-classic` 預設套件，則無需額外安裝此插件作為依賴項。

您可以透過[預設選項](../../using-plugins.mdx#docusauruspreset-classic)來配置此插件。

:::

## 配置 {#configuration}

可接受欄位：

```mdx-code-block
<APITable>
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `lastmod` | `'date' \| 'datetime' \| null` | `null` | `date` is YYYY-MM-DD. `datetime` is a ISO 8601 datetime. `null` is disabled. See [sitemap docs](https://www.sitemaps.org/protocol.html#xmlTagDefinitions). |
| `changefreq` | `string \| null` | `'weekly'` | See [sitemap docs](https://www.sitemaps.org/protocol.html#xmlTagDefinitions) |
| `priority` | `number \| null` | `0.5` | See [sitemap docs](https://www.sitemaps.org/protocol.html#xmlTagDefinitions) |
| `ignorePatterns` | `string[]` | `[]` | A list of glob patterns; matching route paths will be filtered from the sitemap. Note that you may need to include the base URL in here. |
| `filename` | `string` | `sitemap.xml` | The path to the created sitemap file, relative to the output directory. Useful if you have two plugin instances outputting two files. |
| `createSitemapItems` | <code>[CreateSitemapItemsFn](#CreateSitemapItemsFn) \| undefined</code> | `undefined` | An optional function which can be used to transform and / or filter the items in the sitemap. |

```mdx-code-block
</APITable>
```

### 類型 {#types}

#### `CreateSitemapItemsFn` {#CreateSitemapItemsFn}

```ts
type CreateSitemapItemsFn = (params: {
  siteConfig: DocusaurusConfig;
  routes: RouteConfig[];
  defaultCreateSitemapItems: CreateSitemapItemsFn;
}) => Promise<SitemapItem[]>;
```

:::info

此插件同時遵循部分網站配置：

- [`noIndex`](../docusaurus.config.js.mdx#noIndex)：將導致不生成站點地圖
- [`trailingSlash`](../docusaurus.config.js.mdx#trailingSlash)：決定站點地圖中的URL是否包含尾部斜線

:::

:::note[關於 `lastmod`]

`lastmod` 選項僅在插件提供[路由元數據](../plugin-methods/lifecycle-apis.mdx#addRoute)屬性 `sourceFilePath` 和/或 `lastUpdatedAt` 時，才會輸出站點地圖的 `<lastmod>` 標籤。

所有官方內容插件都會為基於內容文件（Markdown、MDX 或 React 頁面組件）的路由提供元數據，但第三方插件作者可能未提供此信息，此時插件將無法為其路由輸出 `<lastmod>` 標籤。

:::

### 配置範例 {#ex-config}

您可以透過預設選項或插件選項來配置此插件。

:::tip

大多數 Docusaurus 用戶透過預設選項來配置此插件。

:::

```js config-tabs
// Preset Options: sitemap
// Plugin Options: @docusaurus/plugin-sitemap

const config = {
  lastmod: 'date',
  changefreq: 'weekly',
  priority: 0.5,
  ignorePatterns: ['/tags/**'],
  filename: 'sitemap.xml',
  createSitemapItems: async (params) => {
    const {defaultCreateSitemapItems, ...rest} = params;
    const items = await defaultCreateSitemapItems(rest);
    return items.filter((item) => !item.url.includes('/page/'));
  },
};
```

您可以在 `/sitemap.xml` 找到您的站點地圖。